--- a/Client/index.html
+++ b/Client/index.html
@@ -36,7 +36,7 @@
                 <tbody id='tableHistory'></tbody>
             </table>
         </div>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://cdn.socket.io/4.2.0/socket.io.min.js" integrity="sha384-PiBR5S00EtOj2Lto9Uu81cmoyZqR57XcOna1oAuVuIEjzj0wpqDVfD0JA9eXlRsj" crossorigin="anonymous"></script>
         <script type="text/javascript" src="./static/js/frontend.js"></script>
     </body>
 </html>
