--- a/Server/index.html
+++ b/Server/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Clock's Dashboard</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-</head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<body>
-  <div id="app">
+<body style="background-color: rgb(99, 97, 97); padding-top: 2%;"><center>
+  <div style="width: 80%; background-color: white; padding: 5%; border-radius: 10px;">
+    <div id="app">
     <h1>Sincronizador de Relojes</h1>
     <h2>Dashboard</h2>
     <hr>
@@ -30,9 +32,10 @@
   </div>
   </section>
   <hr>
-  <button onclick="clock()" class="btn btn-success">Crear nuevo reloj</button>
+  <button onclick="clock()" class="btn btn-primary">Crear nuevo reloj</button>
   </div>
-
+</div>
+</center>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
