Corrección de direcciones ip

--- a/Server/index.html
+++ b/Server/index.html
@@ -38,7 +38,7 @@
 </center>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
-  <script src="./js/frontend.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="text/javascript" src="./static/js/frontend.js"></script>
 </body>
 </html>
